increased the z-index of the global navigation to let the orange line be no longer  hidden by the hero image.

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -557,6 +557,7 @@ a {
     position: relative;
     height: 51px;
     line-height: 42px;
+    z-index: 2;
     nav {
         position: relative;
         z-index: 2;
